styles.css
/* CSS file placeholder. */
@font-face {
    font-family: openSans;
    src: url(OpenSans-Bold.ttf);
}

@font-face {
    font-family: openSansLight;
    src: url(OpenSans-Light.ttf);
}

@font-face {
    font-family: openSansBold;
    src: url(OpenSans-ExtraBold.ttf);
}

html, body, .container{
  height:100%;
  /*background-color: #F0EFF4;  FIX PNG + SVG WHITE BACKGROUNDS FIRST */
}

h1{
  font-family:openSansLight;
  font-size: 5vw;
  text-align:center;
  color:#58595B;
}

.sliderWrapper{
  width: 80%;
  margin-left:10%;

}

.leftButton{
 position: fixed;
 background-color: transparent;
 width: 10%;
 height: 100%;
   z-index:9999;
}

.leftButton:hover{
  background-color: rgba(128, 128, 128, 0.5);
  z-index:99999;

}

.rightButton{
 position:fixed;
 right:0%;
 background-color: transparent;
 width: 10%;
 height: 100%;
 z-index:9999;

}

.rightButton:hover{
  background-color: rgba(128, 128, 128, 0.5);
   z-index:9999;
}


.settingsButton{
 position: fixed;
 top:0;
 background-color: transparent;
 width: 100%;
 height: 15%;
 z-index:1001;
}

.settingsButton:hover{
  background-color: rgba(128, 128, 128, 0.5);
  z-index:9999;
}

.logo{
    width:20%;
    height:20%;
    display:block;
    position:fixed;
    bottom:0;
    left:0;
    z-index:1000;
}

.logo2{
    display:block;
    width:8%;
    position:fixed;
    bottom:3.5%;
    left:1.5%;
    z-index:1000;
}



.stateFont{
  color:#58595B;
  font-size: 6vw;
}

#confAten{
  font-family:openSansLight;
}


 body, html, .container{
  height:100%;
}

.my-container{
    position:relative;
    right:3%;
    width: 50%;
    margin: 0 auto;
}

.country {
    height: 100%;
}

span {
    position: relative;
}

div.nsw, div.qld, div.sa, div.nt, div.wa, div.vic{
    position: absolute;
    width: 18.3%;
    height: 18.3%;
    text-align: center;
    color:#58595B;
     /*mess around */
    font-family:openSans;
}

div.nsw {
    top: 56.3%;
    left: 77.2%;
}

div.qld {
    top: 24.8%;
    left: 76.2%;
}

div.wa {
    top: 43.2%;
    left: 1.7%;
}

div.sa {
    top: 56%;
    left: 28%;
}

div.nt {
    top: 2.8%;
    left: 37.65%;
}

div.vic {
    top: 68.5%;
    left: 55%;
}

@media all and (min-width: 50px)   {  span  { font-size:2.1em;  } }
@media all and (min-width: 100px)  {  span  { font-size:2.2em;  } }
@media all and (min-width: 200px)  {  span  { font-size:2.4em;  } }
@media all and (min-width: 300px)  {  span  { font-size:2.6em;  } }
@media all and (min-width: 400px)  {  span  { font-size:2.8em;  } }
@media all and (min-width: 500px)  {  span  { font-size:3.0em;  } }
@media all and (min-width: 600px)  {  span  { font-size:3.4em;  } }
@media all and (min-width: 700px)  {  span  { font-size:3.8em;  } }
@media all and (min-width: 800px)  {  span  { font-size:4.2em;  } }
@media all and (min-width: 900px)  {  span  { font-size:4.6em;  } }
@media all and (min-width: 1000px) {  span  { font-size:5.0em;  } }
@media all and (min-width: 1100px) {  span  { font-size:5.4em;  } }
@media all and (min-width: 1200px) {  span  { font-size:5.8em;  } }
@media all and (min-width: 1300px) {  span  { font-size:6.2em;  } }
@media all and (min-width: 1400px) {  span  { font-size:6.6em;  } }
@media all and (min-width: 1500px) {  span  { font-size:7.0em;  } }
@media all and (min-width: 1500px) {  span  { font-size:7.2em;  } }
@media all and (min-width: 1600px) {  span  { font-size:7.4em;  } }
@media all and (min-width: 1700px) {  span  { font-size:7.6em;  } }

.international{
  position:absolute;
  top:62%;
  font-family:openSansLight;
  font-size:2vw;
  left:79.5%;
}
.earth{
  width:13%;
  position:absolute;
  bottom:10%;
  margin-left:80%;
}

div.earthNumbers{
  top:70%;
  right:4.5%;
}

div.earthNumbers{
    position: absolute;
    width: 18.3%;
    height: 18.3%;
    text-align: center;
    color:#58595B;
     /*mess around */
    font-family:openSans;
}

.countDownHeader{
  color:#58595B;
  font-family: openSansBold;
  text-decoration:bold;
  padding-top:20%;
  text-align:center;
  position:relative;
}

.countDown{
  text-align: center;
  margin: 0 auto;
  margin: 0 auto;
}

.time, .period{
  display: inline;
}

.time{
  color:#58595B;
  font-family:openSans;
  font-size:10vw;
}

.period{
  color:#58595B;
  font-family:openSans;
  font-size:2vw;
  padding-right:10px;
}

.conferenceStarts{
  padding-top:5%;
  text-align: center;
  height:100%;
}

.starts{
  font-family:openSansLight;
  color:#58595B;
  font-size:2vw;
}

.startDate{
  font-family:openSans;
  color:#FDCE1D;
  font-size:3vw;
  position: relative;
  bottom:2.5%;
}

.cube{
  width:60%;
  height:60%;
  padding-top:10%;
}

.normal, .yellowBold{
  display: inline;
}

.normal{
  font-family:openSansLight;
  color:#58595B;
  font-size:2vw;
}

.yellowBold{
  font-family:openSans;
  color:#FDCE1D;
  font-size:3vw;
  padding-left:1%;
  padding-right:1%;
}

.totalAttendees{
  text-align: center;
  width:50%;
  height:80%;
}

.totalAttendeesHeader{
  color:#58595B;
  font-family: openSans;
  font-size: 3vw;
  padding-bottom:6%;
}

.numberOf{
  position:absolute;
  color:#58595B;
  font-family: openSans;
  text-align:center;
  font-size:16vw;
  width:25%;
  height:25%;
  bottom:60%;
  left:37.5%;
}

input[type="text"] {
  margin: 0;
  width: 30%;
  font-family: sans-serif;
  font-size: 18px;
  appearance: none;
  box-shadow: none;
  border-radius: none;
  margin-left:auto;
  margin-right:auto;
}

input[type="text"]:focus {

}
#save{
  width:20%;
}

#restore{
  width:40%;
}

.keyInput{
  padding-top:2.5%;
  font-size: 1.5vw;
}

.keyText{
  text-align: center;
  position:relative;
  margin-right:5%;
  font-family: openSansLight;
}

.pageSelected{
  text-align:center;
  font-family:openSansLight;
  font-size:2vw;
  padding-top:2.5%;
  padding-bottom:1%;
}

.pageContainer{
    width:50%;
    margin-right:auto;
    margin-left:auto;
}

input[type=checkbox]{
  width:25px;
  height:25px;
}

.pageName{
  font-size:1vw;
  padding-right:20px;
}

.speed{
  font-size:2vw;
  padding-top:27%;
  text-align:center;
  font-family: openSansLight;
}

.saveNExit{
  text-align: center;
  margin-left:auto;
  margin-right:auto;
  font-size:1.5vw;
  padding-top:5%;
  font-family:openSans;
  width:50%;
}

#svgGraph{
  height:600px;
  width:600px;
}

#percentageText{
  font-family:openSansLight;
  font-size:3vw;
  color:#58595B;
  padding:0;
}

#percent{
  font-family:openSans;
  font-size:8vw;
  color:#3F7AAD;
  text-align: center;
  padding-bottom:0;
  margin-bottom:0;
  padding-top:0;
  margin-top:0;
  position:relative;
}

#percentageText{
  text-align: left;
  padding-top:2.5%;
  padding-bottom:2.5%;
  height:100%;
  width:100%;
}

.percentageHeader{
  position:relative;
  top:100px;
  z-index:1000;
}



.graphContainer{
  width:60%;
  height:60%;
  position:fixed;
  bottom:5%;
  left:20%;
  z-index: 9999;

}

#pieChartContainer{
  position:absolute;
  left:35%;
  top:20%;
  width:80%;
  z-index:1000;

}

.pieKpi{
}

#cloudPercent{
  font-family:openSans;
  font-size:8vw;
  color:#3F7AAD;

  position:relative;
}

#cloudPercentText{
  font-family:openSansLight;
  font-size:3vw;
  color:#58595B;
}

#cloudPercentTextContainer{
  position:absolute;
  top:10%;
  z-index:1000;
}

#pieChart{
}

#internPieChart{
}

.kpi{
  opacity: 1;
  transition: ease-out;
}
 /* when hiding the picture */
/* Initial state when showing
.ng-hide-remove {
  opacity: 0;
  display: block !important;
}

/* Will transition towards this state
.ng-hide-remove-active {
  opacity: 1;
} */





.animate.ng-hide-remove{
  transition: 3s;
  opacity: 0;
  display: block !important;
}

.animate.ng-hide-remove-active{
  transition:3s;
  opacity: 1;
}

.animate.ng-hide-add{
  transition:0.1s;
  opacity: 1;
}

.animate.ng-hide-add-active{
  transition:0.1s;
  opacity: 0;
}

#dataContainer{
  width:50%;
}

.synergy4Map{
  height:100%;
}

.my-container2{
    position:relative;
    right:3%;
    width: 50%;
    margin: 0 auto;

}

div.nsw2, div.qld2, div.sa2, div.nt2, div.wa2, div.vic2, div.act2, div.tas2, div.total{
    position: absolute;
    width: 18.3%;
    height: 18.3%;
    text-align: center;
    color:#FFF;
     /*mess around */
    font-family:openSans;
    font-size:80%;
}

div.act2, div.tas2{
  font-size:40%;
}

div.nsw2 {
    top: 58.3%;
    left: 79.6%;
}

div.qld2 {
    top: 26.8%;
    left: 76.2%;
}

div.wa2 {
    top: 45.2%;
    left: 1.7%;
}

div.sa2 {
    top: 58%;
    left: 28%;
}

div.nt2 {
    top: 4.8%;
    left: 37.65%;
}

div.vic2 {
    top: 70.5%;
    left: 55%;
}

div.tas2 {
    top: 87.5%;
    left: 76.2%;
}
div.act2 {
    top: 59.5%;
    left: 65.2%;
}

div.total{
  top:30%;
  left:35%;
  font-size:140%;
}

/* EXAMINE DATA WITH WORD WRAP ID BELOW */

#w74 { word-wrap: break-word; }

.gravatarImage{
  width:100%;
  height:100%;
}

.imageHolder{
  width:12.5%;
  height:25%;
  float:left;
  display:inline;
  padding:0;
  margin:0;
}

.imageHolder2{
  width:100px;
  height:25%;
  float:left;
  display:inline;
  padding:0;
  margin:0;
  display:block;
  padding-left:12.5%;
}


.hunredHeight{
  width:100%;
}

.block{
  opacity:0;
  width:100px;
  height:100px;
}

.blueBackground{
  background-color:#00AEEF;
  height:100%;
}

.gravatarLogo{
  position:fixed;
  width:20%;
  top:30%;
  left:40%;
}

